# grok

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: apache.rs  log.rs  pattern.rs  simple.rs
examples/: simple.rs
patterns/: README.md  bacula.pattern  firewalls.pattern  grok.pattern
src/: fancy_regex.rs  lib.rs  onig.rs  pattern_parser.rs  pcre2.rs  regex.rs
testdata/: BACULA_LOGLINE  BACULA_LOGLINE.aliasesonly  ELB_ACCESS_LOG
