[package]
name = "grok"
version = "2.0.2"
authors = ["Matt Mastracci <matthew@mastracci.com>", "Michael Nitschinger <michael@nitschinger.at>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mmastrac/grok"
documentation = "https://docs.rs/grok2"
homepage = "https://github.com/mmastrac/grok"
description = """
A Rust implementation of the popular Java & Ruby grok library
which allows easy text and log file processing with composable 
patterns.
"""
categories = ["text-processing"]
build = "build.rs"
edition = "2021"
rust-version = "1.56"

[dependencies]
onig = { version = "6.5", default-features = false }

[build-dependencies]
glob = "0.3"
