[package]
name = "grok"
version = "2.3.3"
authors = ["Matt Mastracci <matthew@mastracci.com>", "Michael Nitschinger <michael@nitschinger.at>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mmastrac/grok"
documentation = "https://docs.rs/grok2"
homepage = "https://github.com/mmastrac/grok"
description = """
A Rust implementation of the popular Java & Ruby grok library
which allows easy text and log file processing with composable 
patterns.
"""
categories = ["text-processing"]
build = "build.rs"
edition = "2021"
rust-version = "1.77"

[features]
default = ["onig"]

onig = ["dep:onig"]
regex = ["dep:regex"]
fancy-regex = ["dep:fancy-regex"]
pcre2 = ["dep:pcre2"]

[dependencies]
# The default regex engine. Use default-feature = false to disable it.
onig = { version = "6.5", optional = true, default-features = false }

# The Rust regex library. Does not support backtracking, so many patterns are unusable.
regex = { version = "1", optional = true, default-features = false, features = ["std", "unicode", "perf", "perf-dfa-full"] }

# A more complete Rust regex library supporting backtracking.
fancy-regex = { version = "0.14", optional = true, default-features = false, features = ["std", "unicode", "perf"] }

# A PCRE2 binding.
pcre2 = { version = "0.2.9", optional = true }

[build-dependencies]
glob = "0.3"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "apache"
harness = false

[[bench]]
name = "log"
harness = false

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "pattern"
harness = false
